[package]
name = "ui-theme"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
ahash = { version = "0.8.3", default-features = false }
cfg-if = "1.0.0"
fastrand = "1.9.0"
futures-lite = "1.12.0"
hashbrown = { version = "0.13.2", default-features = false, features = ["serde"] }
tinyvec = { version = "1.6.0", features = ["alloc"] }

[dependencies.serde]
version = "1"
default-features = false
features = ["derive", "alloc"]
optional = true

[target.'cfg(windows)'.dependencies]
blocking = "1.3.0"
wintheme = "0.1.0"

[target.'cfg(unix)'.dependencies]
async-process = "1.6.0"
blocking = "1.3.0"
detect-desktop-environment = "0.2.0"
dirs = "4.0.0"
simplecss = "0.2.1"
zbus = "3.11.0"
zvariant = "3.12.0"

[build-dependencies]
cfg_aliases = "0.1.1"
